# gyro-bot

./: .gitmodules  README.md  project_structure.md
app/: .gitignore  README.md  buildozer.spec  main.py
app/network/: __init__.py  server.py
app/widgets/: __init__.py  dropdown.py  joystick.py  servo_control.py  settings.py  triangle_button.py
docs/: OVERVIEW.md  app_architecture.md  architecture.md  build_instructions.md  control_system.md  firmware_architecture.md  fpga_architecure.md  guide.md  hardware_architecture.md  project_structure.md  server_architecture.md
firmware/: .gitignore  README.md  log.txt
firmware/common/: common.hpp
firmware/components/networking/: CMakeLists.txt
firmware/components/networking/include/: tcp_client.hpp  udp_client.hpp  wifi_station.hpp
firmware/components/networking/src/: tcp_client.cpp  udp_client.cpp  wifi_station.cpp
firmware/control/: CMakeLists.txt  sdkconfig
firmware/control/main/: CMakeLists.txt  main.cpp
firmware/vision/: CMakeLists.txt  sdkconfig
firmware/vision/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/vision/main/include/: vision_context.hpp
firmware/vision/main/src/: main.cpp  vision_context.cpp
fpga/: .gitignore  README.md
hardware/: README.md
hardware/model_design/: GyroBot-Base.stl  GyroBot-MotorMount.stl  GyroBot-Parts.stl  GyroBot.20251129-222356.FCBak  GyroBot.FCStd
server/: README.md  config.py  display.py  main.py  object_detector.py  path_planner.py  sensor_fusion.py  sensor_receiver.py
server/test/: packets.py  tcp_image_receiver.py
(+19 files in other folders)
